# ocamlinvoice

./: .gitignore  INSTALLATION.md  MACOS_INSTALL.md  Makefile  TESTING.md  dune  dune-project  formatting.md  invoice-gui.html  invoice_layout.ml  invoice_layout.mli  invoices.db  json_parser.ml  main.ml  package.json  pdf_document.mli  pdf_generator.ml  pdf_text.ml  pdf_text.mli  readme.md  sender.txt  test-formatting.json  test_basic.ml  types.ml
.github/workflows/: release.yml  test.yml
config/: bankdetails.txt
examples/: example-invoice.json  test-unicode.json
ocaml-backend/: CONFIG-FILES.md  README.md  dune-project
ocaml-backend/config/: currency.txt  customer.txt  dates.txt  invoice.txt  locale.txt  metadata.txt  recipients.txt  vat.txt
ocaml-backend/docs/: TESTING.md
ocaml-backend/src/: database.ml  database.mli  dune  file_parsers.ml  formatting_utils.ml  formatting_utils.mli  invoice_parser.mli  json_parser.ml  main.ml  pdf_generator.ml  pdf_text.ml  recipients_parser.ml  recipients_parser.mli
ocaml-backend/tests/: dune  test_basic.ml
src/: database.mli  dune  gui.ml  gui.mli  index.html  invoice_layout.ml  invoice_parser.ml  invoice_parser.mli  json_parser.ml  main.js  main.ml  pdf_document.ml  pdf_text.ml  pdf_text.mli  recipients_parser.mli  styles.css  types.ml
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tauri/: Cargo.toml  tauri.conf.json
tauri-gui/: README.md
tauri-gui/ocaml-backend/: dune-project  invoices.db
tauri-gui/src/: index.html  main.js  styles.css
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
(+15 files in other folders)
