(executable
 (public_name invoice-generator)
 (name main)
 (libraries camlpdf yojson)
 (modules main json_parser types formatting_utils pdf_text invoice_layout pdf_document pdf_generator))

(test
 (name test_basic)
 (modules test_basic types formatting_utils pdf_text)
 (libraries alcotest camlpdf yojson))