(library
 (public_name invoice-generator.src)
 (name invoice_src)
 (libraries camlpdf yojson sqlite3 unix str)
 (modules types formatting_utils pdf_text invoice_layout pdf_document pdf_generator database recipients_parser invoice_parser file_parsers))

(executable
 (public_name invoice-generator)
 (name main)
 (libraries invoice_src)
 (modules main))